--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,9 @@
 .lead {
   width: 100%;
   padding: 56px 0 92px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 @media screen and (min-width: 1024px) and (max-width: 1279.9px){
   .lead {
