--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,23 +1,29 @@
 .header__lang-link {
-  font-size: 24px;
-  line-height: 28px;
-  font-style: normal;
-  font-weight: 400;
-  text-decoration: none;
-  color: #fff;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+	font-size: 24px;
+	line-height: 28px;
+	font-weight: 400;
+	color: #fff;
+	text-decoration: none;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.header__lang-link:last-child {
+	margin-left: 16px;
 }
 
 .header__lang-link:focus {
-  text-decoration: underline;
+	text-decoration: underline;
+	/* можно сделать с рамкой снизу, но тогда ссылки прыгают что не есть good. */
+	/* border-bottom: 1px solid #fff; */
+}
+
+@media screen and (min-width: 320px) and (max-width: 767.9px) {
+	.header__lang-link {
+		font-size: 18px;
+		line-height: 20px;
+	}
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 767.9px){
-  .header__lang-link {
-    font-size: 18px;
-    line-height: 20px;
-  }
-}
