--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,26 @@
 .header {
-  height: 52px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	height: 52px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 28px 48px 56px 48px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767.9px){
-  .header {
-    height: 42px;
-  }
+@media screen and (min-width: 1024px) and (max-width: 1279.9px) {
+	.header {
+		padding: 28px 48px 48px 48px;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023.9px) {
+	.header {
+		padding: 28px 24px 48px 24px;
+	}
+}
+
+@media screen and (min-width: 320px) and (max-width: 767.9px) {
+	.header {
+		height: 42px;
+		padding: 16px 16px 48px 16px;
+	}
 }
