--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,8 +3,8 @@
   width: 100%;
   font-size: 12px;
   line-height: 18px;
-  font-weight: bold;
-  font-style: normal;
+  font-weight: 900;
   margin: 0;
   padding: 0;
 }
+
