--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,9 +3,18 @@
   font-size: 16px;
   line-height: 163%;
   font-weight: 400;
-  font-style: normal;
   margin: 0;
   padding: 40px 0 33px 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale
 }
+
+@media screen and (min-width: 320px) and (max-width: 767.9px){
+  .intro__text {
+    max-width: 768px;
+    min-width: 288px;
+    font-size: 16px;
+    line-height: 26px;
+    padding: 40px 0 34px 0;
+    }
+  }
