--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,8 +3,13 @@
   font-size: 54px;
   line-height: 58px;
   font-weight: 900;
-  font-style: normal;
   text-align: center;
   margin: 0;
-  padding: 0;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767.9px){
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+    }
+  }
