--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,11 +1,20 @@
 .intro {
-width: 690px;
-padding-left: 148px;
+  width: 690px;
+  padding: 92px 0 0 0;
 }
 
-/* @media screen and (min-width: 1024px) and (max-width: 1279.9px){
+@media screen and (min-width: 768px) and (max-width: 1023.9px){
   .intro {
-    width: 690px;
-    padding-left: 48px;
+    padding: 88px 0 0 24px;
     }
-  } */
+  }
+
+@media screen and (min-width: 320px) and (max-width: 767.9px){
+  .intro {
+    /* width: 288px; */
+    width: 100%;
+    padding: 64px 16px 0 16px;
+    box-sizing: border-box;
+    }
+  }
+
