--- a/blocks/lang-link-wrap/lang-link-wrap.css
+++ b/blocks/lang-link-wrap/lang-link-wrap.css
@@ -1,20 +1,6 @@
 .lang-link-wrap {
   display: flex;
-  gap: 18px;
-  margin: 46px 48px 0 0;
+  align-items: center;
+  margin: 0;
   padding: 0;
 }
-
-@media screen and (min-width: 320px) and (max-width: 767.9px){
-  .lang-link-wrap {
-    margin: 30px 16px 0 0;
-
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023.9px){
-  .lang-link-wrap {
-    margin: 46px 24px 0 0;
-  }
-}
-
