--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,10 +2,20 @@
   font-size: 10px;
   line-height: 14px;
   font-weight: 400;
-  font-style: normal;
   letter-spacing: 1.5px;
-  padding: 0 0 0 148px;
   margin: 0;
+  padding: 8px 0 0 0;
   text-transform: uppercase;
-
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023.9px){
+  .lead__caption {
+    padding-left: 24px;
+    }
+  }
+
+@media screen and (min-width: 320px) and (max-width: 767.9px){
+  .lead__caption {
+    padding-left: 16px;
+    }
+  }
