--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,14 +1,13 @@
 .place__link {
-  font-size: 18px;
-  line-height: 22px;
-  color: #fff;
-  text-decoration: transparent;
+	font-size: 18px;
+	line-height: 22px;
+	color: #fff;
 	list-style-type: none;
-  transition: .5s;
+	transition: .5s;
 	margin: 0;
 	padding: 0;
 }
 
 .place__link:hover {
-  text-decoration: underline;
+	opacity: .8;
 }
