--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,15 +3,15 @@
 	line-height: 28px;
 	font-weight: 400;
 	color: #fff;
-	text-decoration: none;
+  text-decoration-line: none;
 }
 
-.header__lang-link:last-child {
-	margin-left: 16px;
+ul > li:not(:last-child) a {
+	margin-right: 16px;
 }
 
-.header__lang-link:focus {
-	text-decoration: underline;
+.header__lang-link:hover {
+  text-decoration-line: underline;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767.9px) {
