--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-	height: 52px;
+	min-height: 52px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -20,7 +20,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767.9px) {
 	.header {
-		height: 42px;
+		min-height: 42px;
 		padding: 16px 16px 48px 16px;
 	}
 }
