--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
 	width: 690px;
-	padding: 92px 0 0 0;
+	padding: 92px 0 0 148px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023.9px) {
