--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,26 @@
 .lead {
-  width: 100%;
+  max-width: 984px;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279.9px) {
+  .lead {
+    max-width: 928px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023.9px) {
+  .lead {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279.9px) {
+  .lead {
+    width: 100%;
+    min-width: 320px;
+    max-width: 768px;
+  }
 }
