--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,6 @@
 .page {
-  width: 100%;
-  font-family: 'Inter';
-  background-color: #2A2C2F;
+  max-width: 1280px;
+  font-family: 'Inter', 'Arial', sans-serif;
   color: #fff;
+  margin: 0 auto;
 }
-
-
