--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -33,7 +33,7 @@
 @media screen and (min-width: 320px) and (max-width: 767.9px) {
 	.place {
 		padding-top: 50px;
-		width: 320px;
+		width: 100%;
 		grid-template-columns: 1fr;
 		grid-template-rows: auto;
 		gap: 32px;
