--- a/blocks/photo-grid/__container/photo-grid__container.css
+++ b/blocks/photo-grid/__container/photo-grid__container.css
@@ -4,23 +4,27 @@
 	grid-template-rows: minmax(213px, 1fr);
 	gap: 16px;
   list-style-type: none;
-
+	padding: 92px 48px;
+	margin: 0;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279.9px) {
 	.photo-grid {
+    padding: 92px 48px;
 		gap: 14px;
 	}
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023.9px) {
 	.photo-grid {
+    padding: 88px 24px;
 		gap: 16px;
 	}
 }
 
 @media screen and (min-width: 320px) and (max-width: 767.9px) {
 	.photo-grid {
+    padding: 64px 16px;
 		gap: 12px;
 	}
 }
