--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,6 +3,12 @@
 	padding: 92px 0 0 148px;
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1279.9px) {
+	.intro {
+		padding: 92px 0 0 48px;
+	}
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023.9px) {
 	.intro {
 		padding: 88px 0 0 24px;
