--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,7 +7,7 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279.9px) {
   .lead {
-    max-width: 928px;
+    width: 928px;
   }
 }
 
@@ -17,7 +17,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279.9px) {
+@media screen and (min-width: 320px) and (max-width: 767.9px) {
   .lead {
     width: 100%;
     min-width: 320px;
