--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,7 +7,7 @@
   list-style-type: none;
 }
 
-ul > li:not(:last-child) a {
+.header__lang-links > li:not(:last-child) a {
 	margin-right: 16px;
 }
 
