--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_underline/header__lang-link_underline.css);
+@import url(../blocks/header/__lang-link/_margin_right/header__lang-link_margin_right.css);
 @import url(../blocks/main/main.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
@@ -39,4 +40,5 @@
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/margin-description/margin-description.css);
 @import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__link/_margin_first/footer__link_margin_first.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
