--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,19 +1,10 @@
 .footer__link {
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 18px;
-	color: #fff;
-	text-decoration: none;
-	transition: .8s;
-}
-
-.footer__link:hover {
-	opacity: .8;
+	margin-right: 18px;
 }
 
 @media screen and (max-width: 767px) {
-	.footer__link {
-		font-size: 24px;
-		line-height: 24px;
-	}
+  .footer__link  {
+    margin-right: 0px;
+    margin-bottom: 32px;
+  }
 }
