--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,19 +1,3 @@
 .header__lang-link {
-	font-size: 24px;
-	line-height: 28px;
-	font-weight: 400;
-	color: #fff;
-  text-decoration-line: none;
-  list-style-type: none;
-}
-
-.header__lang-link:hover {
-  text-decoration-line: underline;
-}
-
-@media screen and (min-width: 320px) and (max-width: 767.9px) {
-	.header__lang-link {
-		font-size: 18px;
-		line-height: 20px;
-	}
+  margin-right: 16px;
 }
