--- a/blocks/footer/__link/_margin_last/footer__link_margin_last.css
+++ b/blocks/footer/__link/_margin_last/footer__link_margin_last.css
@@ -1,3 +1,9 @@
 .footer__link_margin_last {
   margin-right: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__link_margin_last  {
+    margin-bottom: 0;
+  }
+}
