--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,9 +2,16 @@
 	margin-right: 18px;
 }
 
+.footer__link:last-child {
+	margin-right: 0;
+}
+
 @media screen and (max-width: 767px) {
   .footer__link  {
-    margin-right: 0px;
+    margin-right: 0;
     margin-bottom: 32px;
+  }
+  .footer__link:last-child {
+    margin-bottom: 0;
   }
 }
